--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format:check": "prettier . --check",
     "lint:fix": "eslint . --ext .ts --fix",
     "lint:check": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
   },
   "author": "Gokul",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@eslint/js": "^9.38.0",
     "@types/node": "^24.8.1",
     "eslint": "^9.38.0",
+    "husky": "^9.1.7",
     "prettier": "3.6.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2"
