--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "The user management service",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "dev": "node src/server.js",
+    "dev": "nodemon src/server.ts",
     "format:fix": "prettier . --write",
     "format:check": "prettier . --check",
     "lint:fix": "eslint . --ext .ts --fix",
@@ -21,7 +20,9 @@
     "eslint": "^9.38.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.5",
+    "nodemon": "^3.1.10",
     "prettier": "3.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2"
   },
@@ -32,6 +33,8 @@
     ]
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "@types/express": "^5.0.3",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
   }
 }
